<resources>
    <string name="app_name">projeto_disciplina_dmo1</string>
    <string name="detalhe_a_rotina_de_alimenta_o">Detalhe a rotina de alimentação</string>
    <string name="detalhe_a_rotina_de_atividades_f_sicas">Detalhe a rotina de atividades físicas</string>
    <string name="salvar_treino">Salvar treino</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="salvar_dados_de_login">Salvar dados de login</string>
    <string name="manter_logado">Manter logado</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="selecione_modalidade">Selecione a modalidade</string>
    <string name="icone_spinner">Ícone do Spinner</string>
    <string name="logout">Logout</string>
    <string name="filtrar_treinos">Filtrar Treinos</string>
    <string name="lista_exercicios">Lista Exercicios</string>
    <string name="filtro">Filtro</string>
    <string name="tipo_de_usuario">tipo de usuario</string>
</resources>