<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail" />

    <EditText
        android:id="@+id/senhaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:layout_marginTop="8dp" />

    <CheckBox
        android:id="@+id/checkbox_salvar_dados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar_dados_de_login"
        android:layout_marginTop="16dp" />

    <CheckBox
        android:id="@+id/checkbox_manter_logado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manter_logado"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/cadastrarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:layout_marginTop="16dp" />

</LinearLayout>
