<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar_treino"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selecione_modalidade"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical" />

        <Spinner
            android:id="@+id/modalidadeSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/dietaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detalhe_a_rotina_de_alimenta_o"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/treinoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detalhe_a_rotina_de_atividades_f_sicas"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/salvarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar_treino" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:layout_marginTop="16dp" />

</LinearLayout>
</ScrollView>